--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@ layout: default
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Factura-XML</title>
-    <link rel="stylesheet" href="EstilosFactura.css">
+    <title>Peliculas</title>
+   
 </head>
 
 
 <body>
 
-    <h1 class="tittle">FACTURA- XML </h1>
-    <a href="./ejemplo1.xml">Ejemplo-1</a>
-    <a href="./ejemplo2.xml">Ejemplo-2</a>
-    <a href="./Factura.xml">Ejemplo-Factura</a>
+    <h1 class="tittle">Peliculas </h1>
+    <a href="./peliculas.json">Ver Lista</a>
+    
   
 </body>
 
